# RP2_LCD0in96_LVGLBase

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  RP2_LCD0in96_Demo.c  RP2_LCD0in96_Demo.cpp  bootstrap_simulator.sh  lv_conf.h
doc/: Libraries.pu
lib/: CMakeLists.txt
lib/Board/: CMakeLists.txt
lib/Board/BoardConfig/: BoardConfig.h  CMakeLists.txt  KeyMapping_PC.h
lib/Board/BoardInit/: BoardInit.cpp  BoardInit.h  CMakeLists.txt  DummyBoardInit.cpp
lib/Board/Lcd0in96/: CMakeLists.txt  Lcd0in96.cpp  Lcd0in96.h
lib/Drivers/: CMakeLists.txt
lib/Drivers/Adc/: Adc.cpp  Adc.h  CMakeLists.txt  DummyAdc.cpp
lib/Drivers/Dma/: CMakeLists.txt  Dma.cpp  Dma.h
lib/Drivers/Fifo/: Fifo.cpp  Fifo_PC.cpp
lib/Drivers/Gpio/: CMakeLists.txt  Gpio.cpp  Gpio.h  Gpio_PC.cpp
lib/Drivers/Pwm/: CMakeLists.txt  Pwm.cpp  Pwm.h
lib/Drivers/Spi/: CMakeLists.txt  Spi.cpp  Spi.h
lib/Drivers/Thread/: CMakeLists.txt  Fifo.cpp  Fifo_PC.cpp  Thread.cpp  Thread.h  Thread_PC.cpp
lib/Drivers/Timer/: CMakeLists.txt  Timer.cpp  Timer.h  Timer_PC.cpp
lib/Drivers/Uart/: CMakeLists.txt  DummyUart.cpp  Uart.cpp  Uart.h
lib/Fifo/: CMakeLists.txt  Fifo.cpp  Fifo.h  Fifo_PC.cpp
lib/LvglPort/: CMakeLists.txt  LvglPort.cpp  LvglPort.h  LvglPort_PC.cpp  mouse_cursor_icon.cpp
lib/Screen/: CMakeLists.txt  Scale.cpp  Scale.h  Screen.h
lib/Switch/: CMakeLists.txt  Switch.cpp  Switch.h  Swithch.cpp
lib/Tasks/: CMakeLists.txt
lib/Tasks/Background/: BackgroundTask.cpp
lib/Tasks/BackgroundTask/: BackgroundTask.cpp  BackgroundTask.h  CMakeLists.txt
lib/Tasks/Foreground/: ForegroundTask.cpp
lib/Tasks/ForegroundTask/: CMakeLists.txt  ForegroundTask.cpp  ForegroundTask.h
lib/include/LvglPort/: LvglPort.h
lib/src/: LvglPort.c
